--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,78 @@ html {
     box-sizing: inherit;
 }
 
+h2 {
+    font-size: 2em;
+    font-weight: normal;
+    margin: 0;
+}
+
 body {
     padding: 0;
     margin: 0;
+    position: relative;
+    min-height: 100vh;
+
+}
+
+.container {
+    width: 900px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.title {
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.questions-section {
+    padding: 1rem;
+}
+
+.question {
+    border-radius: 10px;
+    box-shadow: 3px 3px 15px 6px #ccc;
+    padding: 1rem 3rem;
+}
+
+.question:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+.question-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 0rem;
+    border-bottom: 1px solid black;
+
+}
+
+.question-title p {
+    font-size: 1.2em;
+}
+
+.question-btn {
+    border: none;
+    background: transparent;
+}
+
+.question-btn span {
+    display: inline-block;
+    font-size: 2.3em;
+    color: rgb(8, 8, 43);
+    cursor: pointer;
+}
+
+.question-text {
+    padding: 1rem 0rem;
+}
+
+.question-text p {
+    line-height: 1.4rem;
+    font-size: 0.9rem;
+    letter-spacing: 0.1em;
 }
